# plotLib

./: CMakeLists.txt  Makefile  Makefile.am  README.md  autogen.sh  common.h  configure.ac  draw.c  draw.h  error_handling.h  full_example_orig.c  init.c  init.h  interface.c  interface.h  memory.c  memory.h  object.c  object.h  ogl.c  ogl.h  plotlib.c  plotlib.h  vars.h
src/: Makefile.am
src/base/: Makefile  common.c  common.h  draw.c  draw.h  error_handling.c  error_handling.h  init.c  interface.c  interface.h  memory.h  object.c  object.h  vars.h
src/modules/: 2d_line.c  2d_line.h  3d_line.c  3d_line.h  mesh.c  mesh.h  modules.c  modules.h  surf.c  surf.h
