lib_LIBRARIES = plotlib.la
include_LIBRARIES = ../include
plotlib_la_SOURCES=base/common.c base/draw.c base/error_handling.c base/init.c base/interface.c base/memory.c base/object.c 		 \
				base/common.h base/draw.h base/error_handling.h base/init.h base/interface.h base/memory.h base/object.h base/vars.h \
				modules/2d_line.c modules/3d_line.c modules/mesh.c modules/surf.c modules/modules.c\
				modules/2d_line.h modules/3d_line.h modules/mesh.h modules/surf.h modules/modules.h
plotlib_la_CFLAGS =
plotlib_la_LDFLAGS = 

